# safeloop

./: .gitignore  README.md  pyproject.toml
docs/: evaluation-protocol.md  high-level-components.md  research-direction.md  roadmap.md
harnesses/: control_wrapper_scope_v0.json  default_runtime_v0.json  positive_control_scope_v0.json  scope_basic_v0.json
safeloop/: __init__.py  evaluate.py  harness.py  models.py  runner.py  tasks.py  tracing.py
tests/: test_evaluate.py  test_scope_trace.py  test_tracing.py
